@@ -7,6 +7,7 @@ Changes to functions:
 * `sjp.glmer` and `sjp.lmer` get a `axisLimits.y` argument to specify y-axis limits specifically for predicted probability or effect plots.
 
 Bug fixes:
+* Automatic label detection did not choose column names when no variable labels were present for functions that accepted data frames as data argument.
 * `sjp.int` did not work with fitted models from class `lme`.
 * `sjt.xtab` did not show `NA` values for `showNA = TRUE`.
 * Due to rounding, total percentage in `sjt.xtab` could differ from 100%.
